--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -3,6 +3,7 @@ header {
   width: 100%;
   max-height: 140px;
   margin: 0;
+
 }
 
 header a, ul {
@@ -116,4 +117,5 @@ nav ul li ul li a {
 nav ul li:hover ul {
   opacity: 1;
   visibility: visible;
+  z-index: 1;
 }
