--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -66,6 +66,9 @@ footer {
   max-width: 100%;
   font-size: 12px;
   padding: 15px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 .CopywriteCenter {
   display: flex;
