--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,8 +72,8 @@ main {
 }
 
 .bkground3 {
-  background-color: var(--tertiary-dark-color);
-  color: var(--quaternary-light-color);
+  background: var(--primary-light-color);
+  
 }
 
 .center {
@@ -85,7 +85,7 @@ main {
   height: 0;
   padding-bottom: 56.25%; 
 }
-.video {
+.youtubeContainer iframe {
   position: absolute;
   top: 0;
   left: 0;
@@ -101,4 +101,36 @@ main {
 /* Optional: Customize .focus-visible */
 .focus-visible {
   outline-color: lightgreen;
+}
+.prgsIndex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pgmCards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-bottom: 50px;
+}
+
+.pgmImg {
+  height: 250px;
+}
+.pgmImg img{
+  height: 250px;
+  width: 250px;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+}
+
+.pgmText {
+  padding: 15px 7px;
+  font-size: 24px;
+  background-color: var(--primary-dark-color);
+  color: var(--quaternary-light-color);
+  border: var(--primary-dark-color) solid 2px;
+  border-radius: 0 0 10px 10px;
 }
