--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -134,3 +134,28 @@ main {
   border: var(--primary-dark-color) solid 2px;
   border-radius: 0 0 10px 10px;
 }
+
+/* MarkDown CSS */
+.blog-post-container h1 {
+  padding-bottom: 40px;
+  font-size: 45px;
+  border-bottom: 2px solid var(--secondary-light-color);
+}
+
+.blog-post {
+  width: 85%;
+}
+
+.blog-post-content {
+  margin: 0 auto;
+}
+
+.blog-post-content h1 {
+  font-size: 40px;
+  padding-bottom: 0;
+  border-bottom: 0px;
+}
+
+.blog-post-content h2 {
+  font-size: 30px;
+}
