--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -6,27 +6,27 @@
 	opacity: 0;
 }
 
-.slide button {
-	transition: all 0.3s ease;
+.slide .roundButton {
+	transition: all 1s ease;
 	-webkit-transform: translateY(20px);
 					transform: translateY(20px);
 	opacity: 0;
 }
 
 .slide p {
-	transition: all 0.3s ease;
+	transition: all 1s ease;
 	-webkit-transform: translateY(20px);
 					transform: translateY(20px);
 	opacity: 0;
 }
 
 .slide section * {
-	transition: all 0.3s ease;
+	transition: all 7s ease;
 }
 
 .slide section img {
-	-webkit-transform: translateX(-10px);
-					transform: translateX(-10px);
+	-webkit-transform: translateX(-80%);
+					transform: translateX(-80%);
 	opacity: 0;
 }
 
@@ -45,19 +45,20 @@
 .slide.animateIn.previous h1,
 .slide.current h1,
 .slide.animateIn.next h1,
-.slide.animateIn.previous button,
-.slide.current button,
-.slide.animateIn.next button,
+.slide.animateIn.previous .roundButton,
+.slide.current .roundButton,
+.slide.animateIn.next .roundButton,
 .slide.animateIn.previous p,
 .slide.current p,
 .slide.animateIn.next p,
 .slide.animateIn.previous section *,
 .slide.current section *,
 .slide.animateIn.next section * {
+  /*border: 2px solid lime;*/
 	-webkit-transform: translateX(0);
 	        transform: translateX(0);
-	-webkit-transition-delay: 1.9s;
-					transition-delay: 1.9s;
+	-webkit-transition-delay: 2.1s;
+					transition-delay: 2.1s;
 					opacity: 1;
 }
 
@@ -67,38 +68,39 @@
 					transition-delay: 2.1s;
 }
 
-.slide.animateIn.previous button,
-.slide.animateIn.next button {
-	-webkit-transition-delay: 2.3s;
-					transition-delay: 2.3s;
+.slide.animateIn.previous .roundButton,
+.slide.animateIn.next .roundButton {
+  /*border: 2px solid lime;*/
+	-webkit-transition-delay: 2.1s;
+					transition-delay: 2.1s;
 }
 
 .slide.animateIn.previous section img,
 .slide.animateIn.next section img {
-	-webkit-transition-delay: 2.5s;
-					transition-delay: 2.5s;
+	-webkit-transition-delay: 2.1s;
+					transition-delay: 2.1s;
 }
 
 .slide.animateIn.previous section span,
 .slide.animateIn.next section span {
-	-webkit-transition-delay: 2.4s;
-					transition-delay: 2.4s;
+	-webkit-transition-delay: 2.1s;
+					transition-delay: 2.1s;
 }
 
 .slide.animateIn.previous section span strong,
 .slide.animateIn.next section span strong {
-	-webkit-transition-delay: 2.5s;
-					transition-delay: 2.5s;
+	-webkit-transition-delay: 2.1s;
+					transition-delay: 2.1s;
 }
 
 .slide.animateOut h1 {
-	-webkit-transition-delay: 1.3s;
-					transition-delay: 1.3s;
+	-webkit-transition-delay: 1.1s;
+					transition-delay: 1.1s;
 }
 
 .slide.animateOut p {
-	-webkit-transition-delay: 1.2s;
-					transition-delay: 1.2s;
+	-webkit-transition-delay: 1.1s;
+					transition-delay: 1.1s;
 }
 
 .slide.animateOut section span {
@@ -107,8 +109,8 @@
 }
 
 .slide.animateOut section span strong {
-	-webkit-transition-delay: 0s;
-					transition-delay: 0s;
+	-webkit-transition-delay: 1.1s;
+					transition-delay: 1.1s;
 }
 /* Slide elements */
 
@@ -272,13 +274,13 @@
 
 @media (max-height: 500px) {
   .slider-wrapper, .slide {
-    height: calc(100vh - 75px);
+    height: calc(100vh - 50vh);
   }    
 }
 
 @media (max-width: 640px) {
   .slider-wrapper, .slide {
-    height: calc(80vh - 75px);
+    height: calc(80vh - 40vh);
   }    
 }
 
