--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,7 +53,7 @@ main {
 }
 
 .index h1 {
-  font-size: 50px;
+  font-size: 60px;
 }
 
 .index p {
@@ -80,6 +80,10 @@ main {
   text-align: center;
 }
 
+
+.visionIndex p{
+  font-size: 40px;
+}
 .youtubeContainer {
   position: relative;
   width: 100%;
@@ -134,6 +138,43 @@ main {
   color: var(--quaternary-light-color);
   border: var(--primary-dark-color) solid 2px;
   border-radius: 0 0 10px 10px;
+}
+
+.scheduleTable {
+  width: 90%;
+  margin: 0 auto;
+  border-collapse: collapse;
+  border: 2px solid var(--secondary-dark-color);;
+}
+
+.scheduleTable thead tr th, .scheduleTable tbody tr td {
+  text-align: center;
+  height: 50px;
+  width: 150px;
+  
+}
+
+.scheduleTable thead tr th {
+  background-color: var(--secondary-dark-color);
+  color: var(--quaternary-light-color);
+}
+
+.scheduleTable tbody tr td {
+  vertical-align: middle;
+  padding: 15px 10px;
+  border-left: 2px solid var(--secondary-dark-color);
+  border-right: 2px solid var(--secondary-dark-color);
+}
+.scheduleTable tbody tr td:first-child {
+  border-left: none;
+}
+
+.scheduleTable tbody tr td:last-child {
+  border-right: none;
+}
+
+.scheduleDataBr {
+  padding-bottom: 10px;
 }
 
 /* MarkDown CSS */
@@ -260,3 +301,4 @@ textarea.form-control {
 .contactSubmission p {
   font-size: 20px;
 }
+
