--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -144,7 +144,7 @@ main {
   width: 90%;
   margin: 0 auto;
   border-collapse: collapse;
-  border: 2px solid var(--secondary-dark-color);;
+  border: 2px solid var(--secondary-dark-color);
 }
 
 .scheduleTable thead tr th, .scheduleTable tbody tr td {
