--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -140,7 +140,7 @@
 		top: 50%;
 		transform: translateY(-50%);
 		z-index: 10;
-		background: url('../images/svg/next.svg') no-repeat center center / 16px;
+		/** background: url('../images/svg/next.svg') no-repeat center center 16px;**/
 		width: 32px;
 		height: 32px;
 		text-indent: -9999px;
@@ -148,7 +148,7 @@
 }
 
 .previousButton:hover, .nextButton:hover {
-  background: url('../images/svg/next.svg')
+  /**background: url('../images/svg/next.svg')**/
 }
 
 .previousButton {
