--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -96,12 +96,14 @@ main a:hover {
 .visionIndex p{
   font-size: 40px;
 }
+
 .youtubeContainer {
   position: relative;
   width: 100%;
   height: 0;
   padding-bottom: 56.25%; 
 }
+
 .youtubeContainer iframe {
   position: absolute;
   top: 0;
@@ -221,17 +223,30 @@ main a:hover {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  align-items: flex-start;
   padding-top: 40px;
 }
 
 .contactForm {
-  width: 500px;
+  width: 600px;
 }
 
 .googleMap {
   width: 600px;
+  height: 600px;
+  padding-top: 0;
 }
 
+@media only screen and (max-width: 1357px) {
+  .contact {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .googleMap {
+    padding-top: 40px;
+  }
+}
 .contactForm .form-group {
   flex-direction: column;
   display: flex;
