--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -13,7 +13,7 @@ footer {
   flex-direction: row;
   align-content: space-around;
   justify-content: center;
-  max-width: 1160px;
+  flex-wrap: nowrap;
   margin: 0 auto;
   padding: 0px 50px 70px;
   font-size: 14px;
@@ -74,4 +74,37 @@ footer {
   align-items: center;
 }
 
+@media only screen and (max-width: 850px) {
+  .Row {
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+    padding-bottom: 20px;
+  }
 
+  .Section {
+    width: 35%;
+    margin: 0;
+    padding: 10px 25px;
+  }
+
+  footer {
+    padding-top: 20px;
+    height: 490px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .Section {
+    width: 100%;
+  }
+  .Row {
+    padding-bottom: 0;
+  }
+  .CopywriteCenter {
+    flex-direction: column;
+  }
+  footer {
+    height: 700px;
+  }
+}
